--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,10 @@ python = "^3.12"
 pydantic = {extras = ["email"], version = "2.9.2"}
 pydantic-settings = "2.5.2"
 httpx = "^0.28.0"
+fastapi = {extras = ["standard"], version = "^0.115.11"}
+grpcio = "^1.70.0"
+grpcio-tools = "^1.70.0"
+aiosqlite = "^0.21.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.2"
