feat: implementación de componente de postgresql

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ fastapi = {extras = ["standard"], version = "^0.115.11"}
 grpcio = "^1.70.0"
 grpcio-tools = "^1.70.0"
 aiosqlite = "^0.21.0"
+asyncpg = "^0.30.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.2"
