--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ grpcio-tools = "^1.70.0"
 aiosqlite = "^0.21.0"
 asyncpg = "^0.30.0"
 pulsar-client = "^3.6.0"
+requests = "^2.32.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.2"
