--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,3 @@
-version: '3'
-networks:
-  app-network:
-    driver: bridge
-
 services:
   # Start zookeeper
   zookeeper:
@@ -140,11 +135,8 @@ services:
 
   # PostgreSQL Database
   postgres:
-    image: postgres:15-alpine
+    image: postgres:16
     container_name: postgres
-    restart: always
-    networks:
-      - app-network
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
@@ -152,26 +144,28 @@ services:
     ports:
       - "5450:5432"
     volumes:
-      - ./data/postgres:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
+    restart: always
+    networks:
+      - app-network
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 10s
       timeout: 5s
       retries: 5
-      
+
+
   # HTTP API Service
   api-http:
     build:
       context: .
       dockerfile: Dockerfile
     container_name: images-api-http
-    command: bash -c "sleep 30 && python -m app.main --mode http"
+    command: bash -c "python -m app.main --mode http"
     networks:
       - app-network
     depends_on:
       broker:
-        condition: service_healthy
-      postgres:
         condition: service_healthy
     ports:
       - "8000:8000"
@@ -191,20 +185,24 @@ services:
       - HTTP_PORT=8000
       - HTTP_HOST=0.0.0.0
       - PYTHONUNBUFFERED=1
-
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:8000/health || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 2
+      start_period: 60s
+  
   # gRPC Service
   api-grpc:
     build:
       context: .
       dockerfile: Dockerfile
     container_name: images-api-grpc
-    command: bash -c "sleep 30 && python -m app.main --mode grpc"
+    command: bash -c "python -m app.main --mode grpc"
     networks:
       - app-network
     depends_on:
       broker:
-        condition: service_healthy
-      postgres:
         condition: service_healthy
     ports:
       - "8001:8001"
@@ -224,35 +222,48 @@ services:
       - GRPC_PORT=8001
       - GRPC_HOST=127.0.0.1
       - PYTHONUNBUFFERED=1
+    healthcheck:
+      test: ["CMD-SHELL", "exit 0"]
+      interval: 30s
+      timeout: 10s
+      retries: 2
 
+  # Modificación para el servicio create-topic
   create-topic:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: pulsar-consumer-demo
-    command: bash -c "sleep 25 && python -m app.images_collector.infrastructure.messaging.create_topic"
+    container_name: create-settings-pulsar-topic
+    # Ejecutar con || true para que siempre termine con éxito
+    command: bash -c "sleep 15 && python -m app.images_collector.infrastructure.messaging.create_topic || true"
     networks:
       - app-network
     depends_on:
       broker:
         condition: service_healthy
       api-grpc:
-        condition: service_healthy
+        condition: service_started
       api-http:
-        condition: service_healthy
+        condition: service_started
     volumes:
       - ./:/app
     environment:
       - ADMIN_URL=http://broker:8080
-      - SERVICE_URL="pulsar://broker:6650"
+      - PULSAR_SERVICE_URL=pulsar://broker:6650
       - PYTHONUNBUFFERED=1
-    restart: on-failure
+    restart: "no"  # Cambiado de on-failure a no
+    # Añade un healthcheck simple que siempre pase
+    healthcheck:
+      test: ["CMD-SHELL", "exit 0"]
+      interval: 5s
+      timeout: 5s
+      retries: 1
 
   consumer-test:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: pulsar-consumer-demo
+    container_name: consumer-demo-pulsar
     command: bash -c "sleep 45 && python -m app.images_collector.infrastructure.messaging.consumer-demo"
     networks:
       - app-network
@@ -263,6 +274,8 @@ services:
         condition: service_healthy
       api-http:
         condition: service_healthy
+      create-topic:
+        condition: service_healthy     
     volumes:
       - ./:/app
     environment:
@@ -284,3 +297,11 @@ services:
       broker:
         condition: service_healthy
     restart: on-failure
+
+
+networks:
+  app-network:
+    driver: bridge
+
+volumes:
+  postgres_data:
